<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark">

    <ImageView
        android:id="@+id/image"
        android:layout_width="46dp"
        android:layout_height="42dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="53dp"
        android:src="@drawable/ic_cd_logo">
    </ImageView>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/image">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:paddingStart="45dp"
            android:paddingEnd="45dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:text="@string/welcome"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="36sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/raleway"
                android:text="@string/app_name"
                android:textAlignment="textStart"
                android:textAllCaps="true"
                android:textColor="@color/white"
                android:textSize="36sp"
                android:textStyle="bold" />
            <LinearLayout
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="45dp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_thin"
                    android:text="@string/accept_user_args1"
                    android:textColor="@color/black"
                    android:textSize="14sp" />
                <TextView
                    android:id="@+id/agreement_txt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/raleway_thin"
                    android:textAlignment="textStart"
                    android:text="@string/accept_user_args"
                    android:textColor="@color/colorAccent"
                    android:textSize="14sp" />
            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/continue_btn"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_marginBottom="65dp"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:background="@drawable/btn_custom_rect"
            android:fontFamily="@font/raleway"
            android:text="@string/continue_txt"
            android:textAllCaps="false"
            android:textColor="@color/change_color"
            android:textSize="18sp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:orientation="vertical"/>

    </RelativeLayout>
</RelativeLayout>