<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark_opacity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="110dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:layout_gravity="center"
            android:text="@string/error"
            android:textColor="@color/red_light"
            android:textSize="48sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="150dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="220dp"
            android:layout_height="36dp"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/raleway_reg"
            android:text="@string/support_message"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="12sp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/raleway"
            android:layout_gravity="center"
            android:text="@string/support_phone"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </LinearLayout>
</RelativeLayout>