<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:fitsSystemWindows="true"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="52dp"
        android:padding="20dp">

        <TextView
            android:id="@+id/enter_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/raleway"
            android:text="@string/enter_sms_code_instruction"
            android:textColor="@color/colorAccent"
            android:textSize="32sp" />

        <EditText
            android:id="@+id/enter_sms_code"
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_below="@id/enter_txt"
            android:layout_marginTop="49dp"
            android:background="@drawable/ic_text_input"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="number"
            android:textAlignment="center"
            android:textColor="@color/colorAccent"
            android:textSize="36sp" />

        <TextView
            android:id="@+id/invalid_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_sms_code_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/raleway_reg"
            android:text="@string/invalid_code"
            android:textAlignment="textStart"
            android:textColor="@color/red_light"
            android:textSize="14sp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/enter_sms_code_btn"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_below="@id/enter_sms_code"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_custom_rect"
            android:enabled="false"
            android:text="@string/ok"
            android:textColor="@color/change_color"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/chronometer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@id/repeat_code_btn"
            android:layout_centerHorizontal="true"
            android:fontFamily="@font/raleway"
            android:textColor="@color/white"
            android:textSize="36sp" />


        <ProgressBar
            android:id="@+id/progress_circular_sms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/enter_sms_code_btn"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="30dp"
            android:visibility="invisible" />

        <Button
            android:id="@+id/repeat_code_btn"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="23dp"
            android:background="@drawable/btn_custom_rect"
            android:enabled="false"
            android:text="@string/sms_code_repeat"
            android:textAllCaps="false"
            android:textColor="@color/change_color"
            android:textSize="18sp" />
    </RelativeLayout>

</RelativeLayout>