<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_dark"
    android:fitsSystemWindows="true"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="130dp"
        android:layout_marginBottom="52dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="23dp"
            android:layout_marginEnd="23dp"
            android:paddingEnd="23dp"
            android:paddingStart="23dp">

            <TextView
                android:id="@+id/enter_txt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/raleway"
                android:text="@string/enter_code_instruction"
                android:textAlignment="textStart"
                android:textColor="@color/colorAccent"
                android:textSize="36sp" />

            <EditText
                android:id="@+id/enter_code"
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:layout_below="@+id/enter_txt"
                android:layout_marginTop="40dp"
                android:background="@drawable/ic_text_input"
                android:fontFamily="@font/raleway"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="text"
                android:textAlignment="center"
                android:textColor="@color/colorAccent"
                android:textSize="36sp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/enter_code_manually_warning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/enter_code"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/raleway_reg"
                android:text="@string/invalid_code"
                android:textAlignment="center"
                android:textColor="@color/red_light"
                android:textSize="14sp"
                android:visibility="invisible" />

            <Button
                android:id="@+id/enter_code_btn"
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:layout_alignParentBottom="true"
                android:layout_marginBottom="23dp"
                android:background="@drawable/btn_custom_rect"
                android:text="@string/continue_txt"
                android:textAllCaps="false"
                android:textColor="@color/change_color"
                android:textSize="18sp" />

        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>